fixed 'date' bug and alignment in mobile products

--- a/src/index.css
+++ b/src/index.css
@@ -305,6 +305,7 @@ body{
   width: 22em;
   display: flex;
   flex-direction: column;
+  justify-self: center;
   text-align: center;
   letter-spacing: 2px;
 }
@@ -1477,7 +1478,6 @@ button {
 #product-details-column h4{
   font-size: 1em;
   margin-bottom: .4em;
-  
 }
 
 #product-details-column p{
@@ -1505,6 +1505,8 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 100vw;
 }
 
 #orient-icons{
